src/objects/SystemInfoPlayer__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdPrefix__c</fullName>
        <label>ProdPrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorldId__c</fullName>
        <label>WorldId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SystemInfoPlayer</label>
</CustomObject>